<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/start"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".StartActivity">

    <TextView
        android:id="@+id/txtMissatge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/endevina"
        android:textSize="20sp"
        android:padding="16dp"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="100dp"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        app:layout_constraintEnd_toEndOf="parent"/>

    <EditText
        android:id="@+id/txtNumero"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:layout_marginTop="50dp"
        android:autofillHints=""
        android:inputType="number"
        android:hint="@string/escriu"
        app:layout_constraintBottom_toTopOf="@id/txtMissatge"
        app:layout_constraintTop_toBottomOf="@id/btnEndevina"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        app:layout_constraintEnd_toEndOf="parent"/>

    <Button
        android:id="@+id/btnEndevina"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#4CAF50"
        android:paddingHorizontal="24dp"
        android:paddingVertical="10dp"
        android:text="@string/comprova"
        android:textColor="#FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txtNumero"/>

    <Button
        android:id="@+id/btnTornar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Tornar enrere"
        app:layout_constraintTop_toBottomOf="@id/btnEndevina"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="20dp" />

</androidx.constraintlayout.widget.ConstraintLayout>